--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -57,10 +57,10 @@
         </dependency>
         <!-- mybatis-plus end -->
 
-        <!-- MySQL -->
+        <!-- PostgreSQL -->
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
         </dependency>
 
         <!-- swagger start -->
