--- a/config/src/main/resources/config/application-dev.yml
+++ b/config/src/main/resources/config/application-dev.yml
@@ -9,8 +9,8 @@ spring-boot-plus:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/spring_boot_plus?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
-    username: root
+    url: jdbc:postgresql://localhost:5432/spring_boot_plus
+    username: postgres
     password: root
 
   # Redis配置
